Removed all reflection logic (including --add-opens) Added @MaxSizeFrom custom annotation which loads max from a specified resource